<resources>
    <string name="app_name">LeiriaJeans</string>
    <string name="logo_content">LeiriaJeans</string>
    <string name="tvEmail_hint">Email</string>
    <string name="tvPassword_hint">Password</string>
    <string name="contentDescription_bt_login">Login</string>
    <string name="login">Login</string>
    <string name="tv_registar">Registe-se aqui</string>
    <string name="txt_registo">Registar</string>
    <string name="txt_Nome">Nome</string>
    <string name="txt_registar">Registar</string>
    <string name="txt_PasswordHint">Password</string>
    <string name="txt_EmailHint">Email</string>
    <string name="ViewContent_carros">Carros</string>
    <string name="ImageContent_carros">Carros</string>
    <string name="tv_carros">| Carros</string>
    <string name="vprodutos">Produtos</string>
    <string name="imgContent_produtos">Produtos</string>
    <string name="tvProdutos">| Produtos</string>
    <string name="tvBemVindo">Bem-Vindo,</string>
    <string name="txtContent_carrinho">Carrinho</string>
    <string name="txtContent_favoritos">Favoritos</string>
    <string name="ndOpen">Open</string>
    <string name="ndClose">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="icon_carrinho">Carrinho</string>
    <string name="icon_area_pessoal">Area Pessoal</string>
    <string name="txt_username_hint">Username</string>
    <string name="txt_morada">Rua</string>
    <string name="txt_codpostal">Código Postal</string>
    <string name="txt_localidade">Localidade</string>
    <string name="txt_nif">NIF</string>
    <string name="txt_telefone">Telefone</string>
    <string name="txt_detalhes">Detalhes</string>
    <string name="txt_descricao">"Estilo e conforto em uma só peça: esta T-shirt combina em um design moderno com tecido macio e durável, perfeita para qualquer ocasião."</string>
    <string name="txt_title">Title</string>
    <string name="txt_produtonome_title">Title</string>
    <string name="txt_valorproduto">0</string>
    <string name="txt_100">100€</string>
    <string name="btn_addcart">Adicionar ao Carrinho</string>
    <string name="txt_fatura">Fatura 1</string>
    <string name="txt_data_fatura">12/01/2025</string>
    <string name="txt_fatura_valor">Valor da Fatura</string>
    <string name="txt_linhafatura_price">txt_linhafatura_price</string>
    <string name="txt_linhafatura_name">txt_linhafatura_name</string>
    <string name="txt_linhafatura_iva">txt_linhafatura_iva</string>
    <string name="txt_linhafatura_quantity">txt_linhafatura_quantity</string>
    <string name="txt_linhafatura_total">txt_linhafatura_total</string>
    <string name="txt_carrinho_title">txt_carrinho_title</string>
    <string name="txt_carrinho_produto_valor">txt_carrinho_produto_valor</string>
    <string name="txt_quantidade_produto">txt_carrinho_produto_valor</string>
    <string name="txt_menos">txt_menos</string>
    <string name="txt_mais">txt_mais</string>
    <string name="delete_button_text">delete_button_text</string>
    <string name="perfil">Perfil</string>
    <string name="produtos">Produtos</string>
    <string name="faturas">Faturas</string>
    <string name="sobre_nos">Sobre Nós</string>
    <string name="comunicar">Comunicar</string>
    <string name="email">Email</string>
    <string name="txt_api_url">URL API</string>
    <string name="hint_api_url">URL API</string>
    <string name="txt_ip_api">172.22.21.212</string>
    <string name="txt_confirmar">Confirmar</string>
    <string name="tvUsername_hint">Username</string>
    <string name="txt_nomeproprio">Nome</string>
    <string name="txt_perfil_username">Username</string>
    <string name="txt_perfil_primeiro_nome">Nome</string>
    <string name="txt_perfil_email">email</string>
    <string name="txt_perfil_d_pessoais">Dados Pessoais</string>
    <string name="txt_perfil_d_morada">Rua</string>
    <string name="txt_perfil_ver_faturas">Ver Faturas</string>
    <string name="txt_perfil_telemovel">Telemóvel</string>
    <string name="txt_perfil_nif">NIF:</string>
    <string name="txt_btn_editar_perfil">Editar Perfil</string>
    <string name="txt_editar">Editar Perfil</string>
    <string name="txt_editar_perfil">Editar Perfil</string>
    <string name="txt_guardar_perfil">Guardar Perfil</string>
    <string name="txt_cancelar">Cancelar</string>
    <string name="selecione_metodo_pagamento">Selecione o método de pagamento</string>
    <string name="selecione_metodo_expedicao">Selecione o método de expedição</string>
    <string name="txt_total_fatura">Total:</string>
    <string name="txt_itens_fatura">Itens da Fatura</string>
    <string name="txt_detalhes_da_fatura">Detalhes da Fatura</string>
    <string name="txt_historico_de_faturas">Histórico de Faturas</string>
    <string name="txt_pagas">Pagas</string>
    <string name="txt_pendentes">Pendentes</string>
    <string name="txt_total_faturas">Total Faturas</string>
    <string name="txt_minhas_faturas">Minhas Faturas</string>
    <string name="txt_pendente">Pendente</string>
    <string name="txt_valorTotal">€ 99,99</string>
    <string name="txt_fatura_123">Fatura #123</string>
    <string name="txt_data_01">Data: 01/01/2025</string>
    <string name="txt_icone_da_fatura">Ícone da fatura</string>
    <string name="txtnome_de_utilizador">Nome de Utilizador</string>
    <string name="txt_email">Email</string>
    <string name="txtpassword">Password</string>
    <string name="txtrua">Rua</string>
    <string name="txtendereço">Morada</string>
    <string name="txt_codigo_postal">Código Postal</string>
    <string name="localidade">Localidade</string>
    <string name="txt_dados_pessoais">Dados Pessoais</string>
    <string name="txtnif">NIF</string>
    <string name="txttelefone">Telefone</string>
    <string name="txtnomeproprio">Nome Próprio</string>
    <string name="txtregistar">Registar</string>
    <string name="txt_preencha_os_dados_para_se_registar">Preencha os dados para se registar</string>
    <string name="txt_Criarconta">Criar Conta</string>
    <string name="txt_configurar_o_url_da_api">Configurar o URL da API</string>
    <string name="txt_ex_172_22_21_212">Exemplo: 172.22.21.212</string>
</resources>