<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navProdutos"
            android:title="@string/produtos"
            android:icon="@drawable/ic_produtos"
            />
        <item
            android:id="@+id/navCarrinho"
            android:title="Carrinho"
            android:icon="@drawable/ic_produtos"
            />
        <item
            android:id="@+id/navFaturas"
            android:title="@string/faturas"
            android:icon="@drawable/ic_faturas"
            />

        <item
            android:id="@+id/navSobre"
            android:title="@string/sobre_nos"
            android:icon="@drawable/ic_sobre"/>
    </group>
    <item
        android:title="@string/comunicar" >
        <menu>
            <item
                android:id="@+id/navEmail"
                android:title="@string/email"
                android:icon="@drawable/ic_menu_email"/>
        </menu>
    </item>

    <item
        android:title="@string/perfil" >
        <menu>
            <item
                android:id="@+id/navPerfil"
                android:title="@string/perfil"
                android:icon="@drawable/icons8_administrator_male_96"/>
        </menu>
    </item>

    <item
        android:title="Logout">
        <menu>
            <item
                android:id="@+id/navLogout"
                android:title="Logout"
                android:icon="@drawable/ic_logout"/>
        </menu>
    </item>
</menu>