<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    tools:context=".PerfilFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <!-- ImageView para a logo no topo -->
        <ImageView
            android:id="@+id/logo"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:contentDescription="@string/logo_content"
            android:src="@drawable/logo_preto"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <View
            android:id="@+id/ContainerComponents_Registo"
            style="@style/ContainerComponents_Registar"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo" />


        <TextView
            android:id="@+id/tvRua"
            style="@style/TextView_Email"
            android:text="@string/txt_morada"
            android:textColor="#000000"
            android:textSize="16sp"
            android:layout_marginTop="35dp"
            app:layout_constraintTop_toTopOf="@id/ContainerComponents_Registo"
            app:layout_constraintStart_toStartOf="@id/ContainerComponents_Registo"
            app:layout_constraintEnd_toEndOf="@id/ContainerComponents_Registo" />

        <TextView
            android:id="@+id/tvCodPostal"
            style="@style/TextView_Email"
            android:text="@string/txt_codpostal"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/tvRua"
            app:layout_constraintStart_toStartOf="@id/tvRua"
            app:layout_constraintEnd_toEndOf="@id/tvRua" />

        <TextView
            android:id="@+id/tvLocalidade"
            style="@style/TextView_Email"
            android:text="@string/txt_localidade"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/tvCodPostal"
            app:layout_constraintStart_toStartOf="@id/tvCodPostal"
            app:layout_constraintEnd_toEndOf="@id/tvCodPostal" />

        <TextView
            android:id="@+id/tvNif"
            style="@style/TextView_Email"
            android:text="@string/txt_nif"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/tvLocalidade"
            app:layout_constraintStart_toStartOf="@id/tvLocalidade"
            app:layout_constraintEnd_toEndOf="@id/tvLocalidade" />

        <TextView
            android:id="@+id/tvTelefone"
            style="@style/TextView_Email"
            android:text="@string/txt_telefone"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/tvNif"
            app:layout_constraintStart_toStartOf="@id/tvNif"
            app:layout_constraintEnd_toEndOf="@id/tvNif" />

        <TextView
            android:id="@+id/tvNomeProprio"
            style="@style/TextView_Email"
            android:text="@string/txt_nomeproprio"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/tvTelefone"
            app:layout_constraintStart_toStartOf="@id/tvTelefone"
            app:layout_constraintEnd_toEndOf="@id/tvTelefone" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnEditarPerfil"
            style="@style/Bt_login"
            android:text="@string/txt_editar_perfil"
            android:onClick="onClickEditar"
            android:layout_marginTop="45dp"
            app:layout_constraintTop_toBottomOf="@id/tvNomeProprio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
