<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    tools:context=".PerfilEditFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/ContainerComponents_Registo"
            style="@style/ContainerComponents_Registar"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

 «

        <EditText
            android:id="@+id/etRua"
            style="@style/TextView_Email"
            android:hint="@string/txt_morada"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="@id/ContainerComponents_Registo"
            app:layout_constraintStart_toStartOf="@id/ContainerComponents_Registo"
            app:layout_constraintEnd_toEndOf="@id/ContainerComponents_Registo" />

        <EditText
            android:id="@+id/etCodPostal"
            style="@style/TextView_Email"
            android:hint="@string/txt_codpostal"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/etRua"
            app:layout_constraintStart_toStartOf="@id/etRua"
            app:layout_constraintEnd_toEndOf="@id/etRua" />

        <EditText
            android:id="@+id/etLocalidade"
            style="@style/TextView_Email"
            android:hint="@string/txt_localidade"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/etCodPostal"
            app:layout_constraintStart_toStartOf="@id/etCodPostal"
            app:layout_constraintEnd_toEndOf="@id/etCodPostal" />

        <EditText
            android:id="@+id/etNif"
            style="@style/TextView_Email"
            android:hint="@string/txt_nif"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/etLocalidade"
            app:layout_constraintStart_toStartOf="@id/etLocalidade"
            app:layout_constraintEnd_toEndOf="@id/etLocalidade" />

        <EditText
            android:id="@+id/etTelefone"
            style="@style/TextView_Email"
            android:hint="@string/txt_telefone"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/etNif"
            app:layout_constraintStart_toStartOf="@id/etNif"
            app:layout_constraintEnd_toEndOf="@id/etNif" />

        <EditText
            android:id="@+id/etNomeProprio"
            style="@style/TextView_Email"
            android:hint="@string/txt_nomeproprio"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/etTelefone"
            app:layout_constraintStart_toStartOf="@id/etTelefone"
            app:layout_constraintEnd_toEndOf="@id/etTelefone" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGuardarPerfil"
            style="@style/Bt_login"
            android:text="@string/txt_guardar_perfil"
            android:onClick="onClickGuardar"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@id/etNomeProprio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
